<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".DiceDialogFragment"
    android:background="@color/primary_color">

    <TextView
        android:id="@+id/tv_coin_toss_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coin_toss"
        android:textSize="@dimen/dice_primary_text_size"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/margin_title_horizontal"
        android:layout_marginTop="@dimen/margin_title_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_coin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_image_horizontal"
        android:layout_marginTop="@dimen/margin_image_vertical"
        android:src="@drawable/coin_svgrepo_com"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_coin_toss_label"/>

    <TextView
        android:id="@+id/tv_coin_toss_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Результат: Решка(пока статик)"
        android:textColor="@color/white"
        android:textSize="@dimen/dice_secondary_text_size"
        android:layout_marginStart="@dimen/dice_result_label_horizontal_margin"
        app:layout_constraintStart_toEndOf="@id/iv_coin"
        app:layout_constraintTop_toTopOf="@id/iv_coin"
        app:layout_constraintBottom_toBottomOf="@id/iv_coin"/>

    <TextView
        android:id="@+id/tv_dice_toss_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dice_toss"
        android:textSize="@dimen/dice_primary_text_size"
        android:textColor="@color/white"
        android:layout_marginStart="@dimen/margin_title_horizontal"
        android:layout_marginTop="@dimen/margin_title_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_coin"/>

    <ImageView
        android:id="@+id/iv_dice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_image_horizontal"
        android:layout_marginTop="@dimen/margin_image_vertical"
        android:src="@drawable/dice_svgrepo_com_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dice_toss_label"/>

    <TextView
        android:id="@+id/tv_dice_toss_result_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textColor="@color/white"
        android:textSize="@dimen/dice_secondary_text_size"
        android:layout_marginStart="@dimen/dice_result_label_horizontal_margin"
        app:layout_constraintStart_toEndOf="@id/iv_dice"
        app:layout_constraintTop_toTopOf="@id/iv_dice"
        app:layout_constraintBottom_toBottomOf="@id/iv_dice"/>

    <TextView
        android:id="@+id/first_dice_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/dice_secondary_text_size"
        android:layout_marginStart="@dimen/dice_result_margin_2x"
        app:layout_constraintStart_toEndOf="@id/tv_dice_toss_result_label"
        app:layout_constraintTop_toTopOf="@id/iv_dice"
        app:layout_constraintBottom_toBottomOf="@id/iv_dice"/>

    <TextView
        android:id="@+id/hyphen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="-"
        android:textSize="@dimen/dice_secondary_text_size"
        android:layout_marginStart="@dimen/dice_result_margin"
        app:layout_constraintStart_toEndOf="@id/first_dice_result"
        app:layout_constraintTop_toTopOf="@id/iv_dice"
        app:layout_constraintBottom_toBottomOf="@id/iv_dice"/>

    <TextView
        android:id="@+id/second_dice_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="@dimen/dice_secondary_text_size"
        android:layout_marginStart="@dimen/dice_result_margin"
        app:layout_constraintStart_toEndOf="@id/hyphen"
        app:layout_constraintTop_toTopOf="@id/iv_dice"
        app:layout_constraintBottom_toBottomOf="@id/iv_dice"/>

    <TextView
        android:id="@+id/tv_dice_mode_1d4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dice_mode_vertically_margin"
        android:text="@string/mode_1d4"
        android:textColor="@color/white"
        android:textSize="@dimen/dice_primary_text_size"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_dice"
        app:layout_constraintEnd_toStartOf="@id/tv_dice_mode_1d6"/>

    <TextView
        android:id="@+id/tv_dice_mode_1d6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_1d6"
        android:textColor="@color/white"
        android:textSize="@dimen/dice_primary_text_size"
        app:layout_constraintStart_toEndOf="@id/tv_dice_mode_1d4"
        app:layout_constraintTop_toTopOf="@id/tv_dice_mode_1d4"
        app:layout_constraintEnd_toStartOf="@id/tv_dice_mode_1d8"/>

    <TextView
        android:id="@+id/tv_dice_mode_1d8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_1d8"
        android:textColor="@color/white"
        android:textSize="@dimen/dice_primary_text_size"
        app:layout_constraintStart_toEndOf="@id/tv_dice_mode_1d6"
        app:layout_constraintTop_toTopOf="@id/tv_dice_mode_1d4"
        app:layout_constraintEnd_toStartOf="@id/tv_dice_mode_1d12"/>

    <TextView
        android:id="@+id/tv_dice_mode_1d12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_1d12"
        android:textColor="@color/white"
        android:textSize="@dimen/dice_primary_text_size"
        app:layout_constraintStart_toEndOf="@id/tv_dice_mode_1d8"
        app:layout_constraintTop_toTopOf="@id/tv_dice_mode_1d4"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_dice_mode_2d4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/raw_margin_2d"
        android:text="@string/mode_2d4"
        android:textColor="@color/white"
        android:textSize="@dimen/dice_primary_text_size"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_dice_mode_1d4"
        app:layout_constraintEnd_toStartOf="@id/tv_dice_mode_2d6"/>

    <TextView
        android:id="@+id/tv_dice_mode_2d6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_2d6"
        android:textColor="@color/white"
        android:textSize="@dimen/dice_primary_text_size"
        app:layout_constraintStart_toEndOf="@id/tv_dice_mode_2d4"
        app:layout_constraintTop_toTopOf="@id/tv_dice_mode_2d4"
        app:layout_constraintEnd_toStartOf="@id/tv_dice_mode_2d8"/>

    <TextView
        android:id="@+id/tv_dice_mode_2d8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_2d8"
        android:textColor="@color/white"
        android:textSize="@dimen/dice_primary_text_size"
        app:layout_constraintStart_toEndOf="@id/tv_dice_mode_2d6"
        app:layout_constraintTop_toTopOf="@id/tv_dice_mode_2d4"
        app:layout_constraintEnd_toStartOf="@id/tv_dice_mode_2d12"/>

    <TextView
        android:id="@+id/tv_dice_mode_2d12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode_2d12"
        android:textColor="@color/white"
        android:textSize="@dimen/dice_primary_text_size"
        app:layout_constraintStart_toEndOf="@id/tv_dice_mode_2d8"
        app:layout_constraintTop_toTopOf="@id/tv_dice_mode_2d4"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_roll_dice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/btn_vertically_margin"
        android:text="@string/roll_the_dice"
        android:textColor="@color/primary_color"
        android:textSize="@dimen/dice_primary_text_size"
        android:textAllCaps="false"
        android:backgroundTint="@color/white"
        app:layout_constraintStart_toStartOf="@id/tv_dice_mode_2d4"
        app:layout_constraintEnd_toEndOf="@id/tv_dice_mode_2d12"
        app:layout_constraintTop_toBottomOf="@id/tv_dice_mode_2d4"/>


</androidx.constraintlayout.widget.ConstraintLayout>